<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A0707"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mymusic.MainActivity">


    <ImageView
        android:id="@+id/imgAlessia"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/alessia"
        app:srcCompat="@drawable/alessia" />

    <Button
        android:id="@+id/btnAlessia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/imgAlessia"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imgAlessia"
        android:text="@string/btnAlessia"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imgSugar"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/btnSugar"
        android:contentDescription="@string/sugar"
        app:srcCompat="@drawable/sugar" />

    <Button
        android:id="@+id/btnSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/btnAlessia"
        android:text="@string/btnSugar"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imgFortMinor"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_alignEnd="@+id/btnSugar"
        android:layout_below="@+id/imgSugar"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/fortminor"
        app:srcCompat="@drawable/fortminor" />

    <Button
        android:id="@+id/btnFortMinor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnAlessia"
        android:layout_alignTop="@+id/imgFortMinor"
        android:layout_marginTop="37dp"
        android:text="@string/btnFortMinor" />

</RelativeLayout>
